Version 1.1.0-CVS (?? ??? 2006)
 - Implemented dropdown time entry fields based on PATCH 1276894
 - Added option to set remote access permissions to publish.php and rss.php
 - Impemented RFE 1470722: option to disable 2nd entry of cross-day event
 - Fixed bug 1448727: Conflict changes national characters
 - Fixed bug 1477303: CVS Cross-Day events bug
 - Fixed bug 1474888: Timezone issue on updated timestamp (1.1.cvs)
 - Implemented RFE 617965: approve/confirm/reject all events
 - PATCH 1470047: Auto-Completing Tasks
 - Changed gradients to save images in cache file and return real 
   url if called from background_css function in css files
 - Changed css and javascript to external files and enabled caching
 - Added db_cachedir setting to install/index.php script
 - Fixed bug 1467713: report belongs to a deleted user remains in DB
 - Fixed bug 1468170: Can't create Views with NUCs
 - Fixed bug 1468558: view of deleted user remains in the database
 - Fixed bug 1468877: <table> tag missing from 'Add Entry' site extras
 - Fixed bug 1428558: Rejected Event in Views
 - Changed the Timezone calculations to use PHP putenv
 - Fixed bug 1343631: Timezone / Summertime error
 - Fixed bug 1454998: Wrong character in notification mails
 - Fixed bug 1460511: 'Invalid Login' cannot be displayed correctly in German
 - Fixed bug 1462428: repeated reminders not working when using date/time
 - Fixed bug 1462455: reminder send-time offset from event end not beginning
 - Patch 1456375: day view not translating "Description"
 - Fixed bug 1455193: problem with updating the translation file
 - Fixed bug: Do not display logout/export in trailer if system is read-only
 - Fixed bug 1420859: Problems with overriding conflict
 - Fixed bug 1451583: Umlaut Event popup text together with FCKEditor-2.0
 - Patch 1279537: Don't display confidential events in upcoming.php
 - Patch 1445579: sort users in views
 - Performance improvement: if "cachedir" is defined in settings.php, then