@@ -242,6 +242,7 @@ Version 1.1.0-CVS (?? ??? 2006)
     + Category was lost wan clicking on prev/next month in month.php
     + Fixed small bug if using 59 minutes for event time
   - New Features / Enhancements / Changes:
+    + Implemented RFE 1337524: not proper display of "Repeating events" in 'view_entry.php'
     + Implemented dropdown time entry fields based on PATCH 1276894
     + Added option to set remote access permissions to publish.php and rss.php
     + Impemented RFE 1470722: option to disable 2nd entry of cross-day event
